--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
   <script src="./assets/js/main.js"></script>
   <!-- Custom -->
   <script src="./assets/js/custom.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </body>
 
 </html>
