--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,8 @@
   <!-- Custom -->
   <script src="./assets/js/custom.js"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://js.stripe.com/v3/"></script>
+
 </body>
 
 </html>
